--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cba-admin",
-  "proxy": "http://localhost:8000",
+  "proxy": "http://localhost:8000/v1/",
   "version": "1.0.1",
   "private": true,
   "dependencies": {
@@ -13,15 +13,18 @@
     "@emotion/styled": "^11.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hypertheme-editor/chakra-ui": "^0.1.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.35.2",
+    "axios": "^1.4.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "framer-motion": "^4.1.17",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
@@ -30,9 +33,11 @@
     "react-dropzone": "^12.0.4",
     "react-icons": "^4.3.1",
     "react-is": "^18.0.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "redux-persist": "^6.0.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
     "web-vitals": "^1.1.2"
