--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cba-admin",
-  "proxy": "http://localhost:8000/v1/",
+  "proxy": "http://localhost:8000/v1",
   "version": "1.0.1",
   "private": true,
   "dependencies": {
@@ -31,8 +31,10 @@
     "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
+    "react-hook-form": "^7.45.1",
     "react-icons": "^4.3.1",
     "react-is": "^18.0.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
